fix: update wishlist button visibility for non-superuser authentication; enhance breadcrumb and container styling

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -78,9 +78,10 @@ span {
 nav{
     /* background-color: rgba(255, 255, 255, .4); */
     backdrop-filter: blur(15px);
-    border-bottom: 1px solid var(--pink);
 }
-
+.navb{
+    border-bottom: 1px solid var(--grey);
+}
 nav a {
     text-transform: uppercase;
     font-weight: 500 !important;
@@ -462,6 +463,15 @@ input:focus, textarea:focus, select:focus {
     background-position: center center;
 }
 
+.dropdown li a{
+    font-size: 13px !important;
+}
+
 .dropdown li a.active{
-    background-color: var(--pink) !important;
+    color: var(--pink) !important;
+    background-color: transparent;
+}
+.dropdown li a:focus{
+    color: var(--pink) !important;
+    background: transparent !important;
 }
